--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-max",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://simontessard.github.io/portfolio-2023",
+  "homepage": "https://simontessard.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
